# drug-discovery-vector-db

./: .env.example  .gitignore  LICENSE  README.md  README_VECTOR_DB.md  gitignore_vector_db  main.py  pyproject.toml
backend/: .env.example  Cargo.toml  build_errors.txt
backend/src/: config.rs  main.rs
backend/src/api/: collection_handlers.rs  embeddings.rs  handlers.rs  mod.rs  models.rs  persistence.rs
backend/src/api_spec/: builder.rs  mod.rs  models.rs
backend/src/core/: distance.rs  mod.rs  types.rs
backend/src/embeddings/: models.rs  service.rs
backend/src/store/: collection.rs  memory.rs  mod.rs  snapshot.rs  wal.rs
data/: drug_embeddings.npz  drugs.csv  drugs_with_embeddings.csv
docs/prps/: backend.md  embedding_layer.md  ui_redesign.md
frontend/: index.html  package-lock.json  package.json
frontend/public/: manifest.webmanifest
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/ApiExplorer/: EndpointDetails.jsx  EndpointList.jsx  TryItOutPanel.jsx
frontend/src/components/api/: Badge.tsx  CodeBlock.tsx  EndpointDetails.tsx  EndpointGroup.tsx  EndpointItem.tsx  ParamsTable.tsx  ResponseViewer.tsx  TryItOut.tsx
frontend/src/components/layout/: Card.tsx  (+2 more)
frontend/src/pages/: Embeddings.tsx
frontend/src/store/: apiSpecStore.ts
frontend/src/styles/: theme.ts  tokens.ts
src/: data_loader.py  generate_embeddings.py
src/api/: drug_analysis.py  main.py  main.py.backup
src/database/: setup_drugs_collection.py  test_drug_search.py  vector_db_client.py
src/embeddings/: encode_molecule.py  molecular_encoder.py
(+11 files in other folders)
