[project]
name = "drug-discovery-vector-db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.122.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "rdkit>=2025.9.1",
    "requests>=2.32.5",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.2",
    "uvicorn>=0.38.0",
]
